Resolves #102: In save messagebox, default button is now highlighted.

--- a/resources/qss/nodedge_style.qss
+++ b/resources/qss/nodedge_style.qss
@@ -2,7 +2,20 @@ QWidget{
     font-size: 14px;
 }
 QFrame,QDialog,QMainWindow{
-background:palette(window);
+    background:palette(window);
+}
+
+/* RESET EVERYTHING */
+/*QAbstractScrollArea,QCheckBox,QColumnView,QComboBox,QDateEdit,QDateTimeEdit,QDialog,QDialogButtonBox,QDockWidget,QDoubleSpinBox,QFrame,QGroupBox,QHeaderView,QLabel,QLineEdit,QListView,QListWidget,QMainWindow,QMenu,QMenuBar,QMessageBox,QProgressBar,QPushButton,QRadioButton,QScrollBar,QSizeGrip,QSlider,QSpinBox,QSplitter,QStatusBar,QTabBar,QTabWidget,QTableView,QTableWidget,QTextEdit,QTimeEdit,QToolBar,QToolButton,QToolBox,QToolTip,QTreeView,QTreeWidget,QWidget {*/
+/*    padding: 0px;*/
+/*    margin: 0px;*/
+/*    border: 0px;*/
+/*    border-style: none;*/
+/*    background-color: #e6e6e6; !* set with default background color *!*/
+/*}*/
+
+QMessageBox QPushButton {
+    background:palette(base);
 }
 
 QSplitter,QMainWindow::separator{
@@ -237,8 +250,12 @@ QPushButton:pressed:focus{
 
 QPushButton:default{
 color:palette(button-text);
-background:palette(dark);
+background:palette(highlight);
 border-color:palette(dark);
+}
+
+QPushButton:selected{
+    background:palette(highlight);
 }
 
 QLabel{
