Feat: Implement action palette.

--- a/resources/qss/nodedge_style.qss
+++ b/resources/qss/nodedge_style.qss
@@ -621,3 +621,11 @@ QTreeWidget {
     image: url("resources/white_icons/create.png");
     icon-size: 300px;
 }
+
+ActionButton {
+    background-color: palette(dark);
+}
+
+ActionButton QLabel{
+    background-color: transparent;
+}
