Feat: Add python console.

--- a/resources/qss/nodedge_style.qss
+++ b/resources/qss/nodedge_style.qss
@@ -629,3 +629,7 @@ ActionButton {
 ActionButton QLabel{
     background-color: transparent;
 }
+
+ConsoleWidget {
+    background-color: palette(dark);
+}
