Implement new homepage content.

--- a/resources/qss/nodedge_style.qss
+++ b/resources/qss/nodedge_style.qss
@@ -15,15 +15,15 @@ QFrame,QDialog,QMainWindow{
 /*}*/
 
 QMessageBox QPushButton {
-    background:palette(base);
+    background:palette(dark);
 }
 
 QSplitter,QMainWindow::separator{
-background:palette(dark);
+background:palette(base);
 }
 
 QStatusBar{
-background:palette(dark);
+background:palette(base);
 color:palette(window-text);
 }
 
@@ -40,9 +40,9 @@ height:25px;
 QMdiArea QTabBar::tab:top:!selected,QMdiArea QTabBar::tab:top:selected,
 QMdiArea QTabBar::tab:top:!selected:hover{
 background:qlineargradient(x1 : 0,y1 : 0,x2 : 0,y2 : 1,
-    stop : 0 palette(dark),
-    stop : 0.2 palette(dark),
-    stop : 1 palette(dark));
+    stop : 0 palette(base),
+    stop : 0.2 palette(base),
+    stop : 1 palette(base));
 border-top-left-radius:0px;
 border-top-right-radius:0px;
 padding:0px 8px;
@@ -104,8 +104,8 @@ background:qlineargradient(x1 : 0,y1 : 0,x2 : 0,y2 : 1,
 QDockWidget::title:top:!selected{
 background:qlineargradient(x1 : 0,y1 : 0,x2 : 0,y2 : 1,
     stop : 0 palette(light),
-    stop : 0.2 palette(dark),
-    stop : 1 palette(dark));
+    stop : 0.2 palette(base),
+    stop : 1 palette(base));
 }
 
 QDockWidget::close-button {
@@ -116,7 +116,7 @@ QDockWidget::close-button {
 }
 
 QMenuBar {
-    background: palette(dark);
+    background: palette(base);
 }
 
 QMenuBar::item{
@@ -131,12 +131,12 @@ QMenuBar::item:pressed{
 }
 
 QMenu{
-    background:palette(dark);
+    background:palette(base);
     border:1px solid palette(light);
 }
 
 QMenu::item{
-    background:palette(dark);
+    background:palette(base);
     color:palette(text);
 }
 
@@ -216,13 +216,13 @@ stop: 0.7 palette(light), stop: 1.0 palette(light));
 
 QPushButton:hover{
 color:palette(button-text);
-/*background:palette(dark);*/
-background:palette(base);
-border-color:palette(dark);
+/*background:palette(base);*/
+background:palette(dark);
+border-color:palette(base);
 }
 
 FileToolButton:hover{
-background-color:palette(base);
+background-color:palette(dark);
 }
 
 QToolButton {
@@ -232,7 +232,7 @@ QToolButton {
 FileToolButton
 {
     color: palette(text);
-    background-color: palette(midlight);
+    background-color: palette(mid);
     border: 0px solid palette(light);
     border-radius: 5px;
     text-align: bottom;
@@ -245,13 +245,13 @@ QPushButton:pressed,
 QPushButton:pressed:focus{
     color:palette(button-text);
     background:palette(highlight);
-    border-color:palette(dark);
+    border-color:palette(base);
 }
 
 QPushButton:default{
 color:palette(button-text);
 background:palette(highlight);
-border-color:palette(dark);
+border-color:palette(base);
 }
 
 QPushButton:selected{
@@ -302,7 +302,7 @@ background-color: palette(highlight);
 QHeaderView::section
 {
 border: 0px solid palette(light);
-background-color: palette(dark);
+background-color: palette(base);
 }
 
 QScrollBar:horizontal {
@@ -326,7 +326,7 @@ background: palette(midlight);
 }
 
 GraphicsNodeTitleLabel{
-background:palette(dark);
+background:palette(base);
 max-height: 20px;
 padding-left: 10px;
 padding-top: 2px;
@@ -334,7 +334,7 @@ padding-bottom: 2px;
 }
 
 GraphicsNodeTitleLabel:hover{
-    background: palette(dark);
+    background: palette(base);
 }
 
 /*QMenu{
@@ -394,7 +394,7 @@ font-size: 14px;
 }
 
 QToolBar{
-background: palette(midlight);
+background: palette(mid);
 border-top:1px solid palette(light);
 border-bottom:1px solid palette(light);
 }
@@ -431,21 +431,21 @@ GraphicsBlockContent QListWidget {
 }
 
 GraphicsNodeTitleFrame {
-    background: palette(dark);
+    background: palette(base);
 }
 
 GraphicsNodeStatusLabel {
-    background: palette(dark);
+    background: palette(base);
 }
 
 GraphicsNodeTypeLabel {
-    background: palette(dark);
+    background: palette(base);
     color: palette(light);
 }
 
 HeaderIconButton, HeaderTextButton {
-    background: palette(midLight);
-    icon-background-color: palette(base);
+    background: palette(mid);
+    icon-background-color: palette(dark);
     icon-size: 30px;
     text-align: center;
     border: 0px solid palette(text);
@@ -514,7 +514,7 @@ HeaderIconButton, HeaderTextButton {
 
 /*HeaderIconButton:hover{
     border-color:palette(highlight);
-    background:palette(base);
+    background:palette(dark);
 }*/
 
 HeaderIconButton:pressed,
@@ -526,15 +526,15 @@ HeaderIconButton:pressed:focus{
 
 MenuButton
 {
-    background: palette(dark);
-    icon-background-color: palette(base);
+    background: palette(mid);
+    icon-background-color: palette(dark);
     color: palette(text);
     icon-size: 30px;
     text-align: center;
     text-align: left;
     border: 0px;
     border-radius: 0px;
-    /*border-right: 3px solid palette(base)*/
+    /*border-right: 3px solid palette(dark)*/
 }
 
 MenuButton:pressed:focus,
@@ -542,27 +542,26 @@ MenuButton:pressed
 {
     color:palette(button-text);
     background:palette(highlight);
-    border-color:palette(highlight);
 }
 
-MenuButton:hover
-{
-    border-right: 3px solid palette(base);
-}
+/*MenuButton:hover*/
+/*{*/
+/*    border-right: 3px solid palette(dark);*/
+/*}*/
 
 MenuButton:checked
 {
     color:palette(button-text);
-    background:palette(midLight);
+    background:palette(base);
     border-color:palette(highlight);
 }
 
 StackedWidget {
-    background-color: palette(dark);
+    background-color: palette(base);
 }
 
 TitleLabel {
-    background-color: palette(dark);
+    background-color: palette(base);
     color: palette(text);
     font-size: 24px;
     font-weight: bold;
@@ -570,17 +569,17 @@ TitleLabel {
 }
 
 ContentLabel {
-    background-color: palette(dark);
+    background-color: palette(base);
     border: 0px;
 }
 
 SettingsContentWidget {
-    background-color: palette(dark);
+    background-color: palette(base);
     border: 0px;
 }
 
 QComboBox {
-    background-color: palette(dark);
+    background-color: palette(base);
     color: palette(text);
     border: 0px;
 }
@@ -594,7 +593,7 @@ HeaderMenuIconButton:checked {
 }
 
 LogsListWidget {
-    background-color: palette(dark);
+    background-color: palette(base);
     border: 0px;
 }
 
@@ -604,7 +603,7 @@ QListView::item {
 }
 
 LogsListWidget {
-    background-color: palette(dark);
+    background-color: palette(base);
     border: 0px;
 }
 
@@ -623,7 +622,7 @@ QTreeWidget {
 }
 
 ActionButton {
-    background-color: palette(dark);
+    background-color: palette(base);
 }
 
 ActionButton QLabel{
@@ -631,5 +630,26 @@ ActionButton QLabel{
 }
 
 ConsoleWidget {
-    background-color: palette(dark);
+    background-color: palette(base);
+}
+
+LeftMenuWidget {
+    background-color: palette(mid);
+}
+
+#homeContentTitleLabel {
+    font-size: 50px;
+    color: palette(link);
+}
+
+#homeContentSubTitleLabel {
+    font-size: 20px;
+    color: palette(link);
+}
+
+LinkButton {
+    background-color: palette(base);
+    color: palette(highlight);
+    text-align: left;
+    border: none;
 }
