--- a/resources/qss/nodedge_style.qss
+++ b/resources/qss/nodedge_style.qss
@@ -234,6 +234,8 @@ FileToolButton
     color: palette(text);
     background-color: palette(mid);
     border: 0px solid palette(light);
+    padding: 0px 0px 0px 0px;
+    margin: 0px;
     border-radius: 5px;
     text-align: bottom;
 }
