Resolves #168 and resolves #167. Add new action for real time evaluation.

--- a/resources/qss/nodedge_style.qss
+++ b/resources/qss/nodedge_style.qss
@@ -686,3 +686,7 @@ LinkButton:pressed:focus {
     background-color: palette(base);
     color: palette(highlight);
 }
+
+QToolButton:checked {
+    background: palette(highlight);
+}
